# kanbitan

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260716_0001_initial_schema.py  20260722_0002_alegra_catalog.py
backend/app/: __init__.py  alegra.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/core/: __init__.py  config.py
backend/tests/: test_alegra.py  test_domain_rules.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/inventario/: page.tsx
frontend/src/app/proveedores/: page.tsx
frontend/src/app/tablero/: page.tsx
frontend/src/components/: catalog-pages.tsx  counter-screen.tsx  kanban-dashboard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/src/lib/: api.ts  types.ts
