[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanbitan-api"
version = "0.1.0"
description = "Auditable purchasing workflow API for Kanbitan"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "sqlmodel>=0.0.22,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
